--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
             <version>3.0.4.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.jeasy</groupId>
+            <artifactId>easy-random-core</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+
 
     </dependencies>
 
