--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>Sping Blog for Jupiter</description>
     <properties>
         <java.version>11</java.version>
+        <skipTests>true</skipTests>
     </properties>
     <dependencies>
         <dependency>
